--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "NeuroSprint",
-  "short_name": "NeuroSprint",
+  "name": "HjärnMatch",
+  "short_name": "HjärnMatch",
   "start_url": ".",
   "display": "standalone",
   "background_color": "#F4F6F5",
