--- a/manifest.json
+++ b/manifest.json
@@ -1,9 +1,14 @@
+
 {
   "name": "HjärnMatch",
   "short_name": "HjärnMatch",
   "start_url": ".",
   "display": "standalone",
-  "background_color": "#F4F6F5",
-  "theme_color": "#2E7D32",
-  "icons": []
+  "background_color": "#F7F5F3",
+  "theme_color": "#EDE7E3",
+  "icons": [
+    { "src": "icon-192.png", "sizes": "192x192", "type": "image/png" },
+    { "src": "icon-512.png", "sizes": "512x512", "type": "image/png" },
+    { "src": "maskable-icon.png", "sizes": "512x512", "type": "image/png", "purpose": "maskable" }
+  ]
 }
