--- a/manifest.json
+++ b/manifest.json
@@ -4,8 +4,8 @@
   "short_name": "HjärnMatch",
   "start_url": ".",
   "display": "standalone",
-  "background_color": "#F7F5F3",
-  "theme_color": "#EDE7E3",
+  "background_color": "#F6F4F1",
+  "theme_color": "#6B8E7A",
   "icons": [
     { "src": "icon-192.png", "sizes": "192x192", "type": "image/png" },
     { "src": "icon-512.png", "sizes": "512x512", "type": "image/png" },
