--- a/manifest.json
+++ b/manifest.json
@@ -1,14 +1,13 @@
-
 {
-  "name": "HjärnMatch",
-  "short_name": "HjärnMatch",
-  "start_url": ".",
-  "display": "standalone",
-  "background_color": "#F6F4F1",
-  "theme_color": "#6B8E7A",
-  "icons": [
-    { "src": "icon-192.png", "sizes": "192x192", "type": "image/png" },
-    { "src": "icon-512.png", "sizes": "512x512", "type": "image/png" },
-    { "src": "maskable-icon.png", "sizes": "512x512", "type": "image/png", "purpose": "maskable" }
-  ]
+"name":"HjärnMatch",
+"short_name":"HjärnMatch",
+"start_url":"/NeuroSprint/",
+"scope":"/NeuroSprint/",
+"display":"standalone",
+"background_color":"#F3F0EA",
+"theme_color":"#4F6F64",
+"icons":[
+{"src":"/NeuroSprint/icon-192.png?v=18","sizes":"192x192","type":"image/png"},
+{"src":"/NeuroSprint/icon-512.png?v=18","sizes":"512x512","type":"image/png"}
+]
 }
