--- a/manifest.json
+++ b/manifest.json
@@ -4,10 +4,10 @@
 "start_url":"/NeuroSprint/",
 "scope":"/NeuroSprint/",
 "display":"standalone",
-"background_color":"#F3F0EA",
-"theme_color":"#4F6F64",
+"background_color":"#F4F1EC",
+"theme_color":"#2F5D50",
 "icons":[
-{"src":"/NeuroSprint/icon-192.png?v=18","sizes":"192x192","type":"image/png"},
-{"src":"/NeuroSprint/icon-512.png?v=18","sizes":"512x512","type":"image/png"}
+{"src":"/NeuroSprint/icon-192.png?v=19","sizes":"192x192","type":"image/png"},
+{"src":"/NeuroSprint/icon-512.png?v=19","sizes":"512x512","type":"image/png"}
 ]
 }
