--- a/manifest.json
+++ b/manifest.json
@@ -5,9 +5,5 @@
 "scope":"/NeuroSprint/",
 "display":"standalone",
 "background_color":"#F4F1EC",
-"theme_color":"#2F5D50",
-"icons":[
-{"src":"/NeuroSprint/icon-192.png?v=19","sizes":"192x192","type":"image/png"},
-{"src":"/NeuroSprint/icon-512.png?v=19","sizes":"512x512","type":"image/png"}
-]
+"theme_color":"#2F5D50"
 }
